--- a/css/styles.css
+++ b/css/styles.css
@@ -11577,7 +11577,7 @@ section#contact form#contactForm :-ms-input-placeholder {
   transition: transform 0.3s ease;
 }
 
-/* Efecto suave al pasar el mouse (opcional) */
+/* Efecto suave al pasar el mouse (opcional) *
 .client-logo-lg:hover {
   transform: scale(1.05);
 }
