Add footer styles for background and border

--- a/css/styles.css
+++ b/css/styles.css
@@ -11647,3 +11647,33 @@ section#contact form#contactForm :-ms-input-placeholder {
 
 
 /* fin de los links de redes, empresas tech  */
+
+
+/* bg footer ---   inicio  */
+
+.footer-green {
+    background-color: #212529; /*  CAMBIA ESTE COLOR */
+}
+
+
+.footer-border-top {
+    border-top: 1px solid #4e4e4e; /*  Grosor y color del filete */
+}
+
+/* bg footer ---   fin  */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
