Add comment for footer background in styles.css
Added comment for footer background section.

--- a/css/styles.css
+++ b/css/styles.css
@@ -11651,16 +11651,18 @@ section#contact form#contactForm :-ms-input-placeholder {
 
 /* bg footer ---   inicio  */
 
+/* bg footer ---   inicio  */
+
 .footer-green {
     background-color: #212529; /*  CAMBIA ESTE COLOR */
 }
-
 
 .footer-border-top {
     border-top: 1px solid #4e4e4e; /*  Grosor y color del filete */
 }
 
 /* bg footer ---   fin  */
+
 
 
 
